--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   Several days ago <a href="https://twitter.com/maartenzam"><!-- -->Maarten Lambrechts</a> —
   creator of the great <a href="http://rocknpoll.graphics"><!-- -->rocknpoll.graphics</a> —
   wrote on twitter asking if it would create an article with
-  similar navigation using Idyll.</p><div></div><p>It is!</p><span __expr__="[object Object]" class="action"> Scroll on to find out more... </span></div><div class="element "><p>
+  similar navigation using Idyll.</p><div></div><p>It is!</p><span __expr__="[object Object]" class="action"> Click to find out more... </span></div><div class="element "><p>
 To simplify things, I created a <code><!-- -->Scroll</code> component that will scroll to a particular
 section based on its input value. The Idyll markup looks something like this:</p><pre><code>[var name:&quot;currentSection&quot; value:&quot;1&quot; /]
 [Scroll section:currentSection]
